# widget

./: .gitignore  .yarnrc.yml  README.md  package.json  tsconfig.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/app/: run.rs
desktop/src-tauri/src/config/: constants.rs
desktop/src-tauri/src/infra/: icons.rs
desktop/src-tauri/src/shell/: mod.rs  tray.rs  window.rs
frontend/: package.json
frontend/app/entrypoint/: CHANGELOG.md  next.config.ts  package.json  tsconfig.json
frontend/app/entrypoint/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/pages/: package.json
frontend/pages/home/: CHANGELOG.md  package.json
frontend/pages/home/src/: index.ts  page.tsx
frontend/pages/src/: index.ts
frontend/src/app/: page.tsx
frontend/ui/icons/: package.json
frontend/ui/icons/src/: icon.css.ts  icons.interfaces.ts  index.ts  replacements.ts
frontend/ui/icons/src/icons/: alert.icon.tsx  arrow-left.icon.tsx  atlantis-solid.icon.tsx  atlantis.icon.tsx  bell.icon.tsx  check.icon.tsx  checks.icon.tsx  chevron-down.icon.tsx  chevron-left.icon.tsx  chevron-right.icon.tsx  chevron-small-down.icon.tsx  chevron-small-left.icon.tsx  chevron-small-right.icon.tsx  chevron-small-up.icon.tsx  chevron-up.icon.tsx  clock.icon.tsx  comment.icon.tsx  exclamation.icon.tsx  index.ts  (+13 more)
frontend/ui/storybook/: package.json
frontend/ui/storybook/src/: main.ts  preview.tsx
frontend/ui/theme/: package.json
frontend/ui/theme/src/: index.ts  theme.css.ts
renderer/: index.html  package.json
(+34 files in other folders)
