[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = ["tray-icon"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

tray-icon = "0.21"

# нужно только чтобы прочитать png -> rgba
image = { version = "0.25", default-features = false, features = ["png"] }
